# RAG-AI-Agent

./: README.md  custom_types.py  data_loader.py  main.py  pyproject.toml  vector_db.py
qdrant_storage/: raft_state.json
qdrant_storage/collections/docs/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/docs/0/segments/05a0bb2e-74e0-4548-acf0-e408fc7e6be1/: mutable_id_tracker.mappings
qdrant_storage/collections/docs/0/segments/aa45b563-3cd9-426e-bfe0-f0d33895fed2/: mutable_id_tracker.mappings
qdrant_storage/collections/docs/0/segments/ca49ee6e-d1f1-4041-9efe-73308d337452/: mutable_id_tracker.mappings
